src/human_study/program_14/python_err_msg.txt
File "./seq2parse/human_study/program_14/original.py", line 7
    elif item > number:
    ^^^^
SyntaxError: invalid syntax
